multi-role sync update: 2026-02-24 06:00

--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-24T06:00:01Z",
+  "updated_at": "2026-02-24T06:00:57Z",
   "tasks": [
     {
       "title": "cron 每日任務自動化（重設狀態）",
@@ -106,232 +106,8 @@
       "updated_at": "2026-02-22T15:15:00Z"
     },
     {
-      "title": "台積電J值追蹤提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
       "title": "確認明晚行程",
       "status": "待處理",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "Mac備忘錄AI轉運分析處理",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "郵件附件監看",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "每日Token使用記錄",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "記憶體優化提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "AI記憶與配置自動備份",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "iCloud整理檢測_0310",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "iCloud安全整理_0330",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "daily_dashboard_update",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "自我檢測",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "每日美股台股匯報",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "工作流每日檢查_0810",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "郵件分類檢查-早上",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "0050 J值買點提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "國泰信用卡-LinePay點數扣點提醒",
-      "status": "待處理",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
-      "source": "auto"
-    },
-    {
-      "title": "郵件分類檢查-下午",
-      "status": "已完成",
       "next_step": "",
       "owner_role": "",
       "blocked_reason": "-",
@@ -358,7 +134,7 @@
       "source": "auto"
     },
     {
-      "title": "散熱族群股價追蹤(早)",
+      "title": "daily_dashboard_update",
       "status": "已完成",
       "next_step": "",
       "owner_role": "",
@@ -368,7 +144,315 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T09:20:00Z",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "Context Token優化監控",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "自我檢測",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "每日美股台股匯報",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "工作流每日檢查_0810",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "Mac備忘錄AI轉運分析處理",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件分類檢查-早上",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "台積電J值追蹤提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "0050 J值買點提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件附件監看",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "國泰信用卡-LinePay點數扣點提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "BNI例會連動檢查-國定假日跳過",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "兆鯨明天任務提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "可成科技_面試結果確認",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件分類檢查-下午",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "確認澤于OpenClaw安裝時間",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "每日Token使用記錄",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "記憶體優化提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "AI記憶與配置自動備份",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "iCloud整理檢測_0310",
+      "status": "阻塞",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "cron announce delivery failed",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "iCloud安全整理_0330",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "聖發_3名入職建檔提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
+      "source": "auto"
+    },
+    {
+      "title": "散熱族群股價追蹤(早)",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -382,21 +466,21 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
       "title": "散熱族群股價追蹤",
-      "status": "已完成",
+      "status": "阻塞",
       "next_step": "",
       "owner_role": "",
-      "blocked_reason": "-",
+      "blocked_reason": "cron announce delivery failed",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T09:20:00Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -410,7 +494,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -424,7 +508,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -438,7 +522,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -452,7 +536,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -466,7 +550,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -480,7 +564,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -494,7 +578,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -508,7 +592,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -522,7 +606,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     },
     {
@@ -536,7 +620,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-24T06:00:57Z",
       "source": "auto"
     }
   ]
