--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-25T05:35:26Z",
+  "updated_at": "2026-02-25T07:54:37Z",
   "tasks": [
     {
       "title": "OpenClaw 設定與資料備份",
@@ -72,8 +72,8 @@
     },
     {
       "title": "NotebookLM Skill 開發",
-      "status": "待處理",
-      "next_step": "規劃草稿在 dev/notebooklm-skill.md",
+      "status": "已完成",
+      "next_step": "-",
       "owner_role": "開發優化師",
       "blocked_reason": "-",
       "priority": "normal",
@@ -81,7 +81,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-25T07:54:37Z"
     },
     {
       "title": "儀表板視覺老花優化",
@@ -163,8 +163,8 @@
     },
     {
       "title": "確認明晚行程",
-      "status": "待處理",
-      "next_step": "",
+      "status": "已完成",
+      "next_step": "取消",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -172,7 +172,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T14:32:09Z",
+      "updated_at": "2026-02-25T07:54:37Z",
       "source": "auto"
     },
     {
