zhaojing: sync consulting project tasks

--- a/data/zhaojing/tasks.json
+++ b/data/zhaojing/tasks.json
@@ -1,6 +1,90 @@
 {
-  "updated_at": "2026-02-24T06:00:57Z",
+  "updated_at": "2026-02-25T13:59:30Z",
   "tasks": [
+    {
+      "title": "兆鯨：肚肚系統導入／安裝（2 小時）",
+      "status": "待處理",
+      "next_step": "3/3（二）10:00-12:00；確認權限分級/硬體保固/報表清單",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "urgent",
+      "type": "alert",
+      "due": "2026/3/3",
+      "time": "10:00",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
+    {
+      "title": "兆鯨：整合貸款／2026 還款表（資料缺口清單＋試算）",
+      "status": "待處理",
+      "next_step": "補齊餘額/期數/扣款日/月付→產出 2026 還款表與2-7月高峰說明",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
+    {
+      "title": "兆鯨：1111 人力銀行刊登市場門市職缺",
+      "status": "待處理",
+      "next_step": "完成刊登並回報連結/截圖",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "urgent",
+      "type": "alert",
+      "due": "2026/2/25",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
+    {
+      "title": "兆鯨：勞工局調解 25 萬處理",
+      "status": "已完成",
+      "next_step": "任務結束",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
+    {
+      "title": "兆鯨：Google下載資料整理→摘要MD（方案3上雲）",
+      "status": "待處理",
+      "next_step": "等小C產出摘要MD→同步 Drive（不全量上傳）",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
+    {
+      "title": "兆鯨：建立/維護客戶主檔（資訊資料庫 index.md）",
+      "status": "待處理",
+      "next_step": "補齊統編/地址/窗口/來源資訊；維持每週更新 Top3/決策",
+      "owner_role": "兆鯨顧問",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-25T13:59:30Z",
+      "source": "manual"
+    },
     {
       "title": "王原浦 2-1-1 合約到期催簽",
       "status": "阻塞",
@@ -133,8 +217,8 @@
     },
     {
       "title": "兆鯨明天任務提醒",
-      "status": "待處理",
-      "next_step": "",
+      "status": "已完成",
+      "next_step": "取消",
       "owner_role": "",
       "blocked_reason": "-",
       "priority": "normal",
@@ -142,7 +226,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-24T06:00:57Z",
+      "updated_at": "2026-02-25T13:59:30Z",
       "source": "auto"
     },
     {
