--- a/data/zhaojing/tasks.json
+++ b/data/zhaojing/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-25T13:59:30Z",
+  "updated_at": "2026-02-25T14:28:45Z",
   "tasks": [
     {
       "title": "兆鯨：肚肚系統導入／安裝（2 小時）",
@@ -87,16 +87,16 @@
     },
     {
       "title": "王原浦 2-1-1 合約到期催簽",
-      "status": "阻塞",
-      "next_step": "協商缺口：開25K/底22K/對方出20K",
+      "status": "待處理",
+      "next_step": "2/26(四) 08:30 出門再確認；若仍未回覆→改採書面通知/限期簽約",
       "owner_role": "兆鯨顧問",
-      "blocked_reason": "缺口尚未達成共識",
+      "blocked_reason": "-",
       "priority": "urgent",
       "type": "alert",
       "due": "2026/2/28",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
+      "updated_at": "2026-02-25T14:28:45Z"
     },
     {
       "title": "謝瑾君 2-2 合約到期催簽",
